src/escp/bindings.rs

extern "C" {
    pub fn dtn_log_getnext() -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn dtn_err_getnext() -> *mut ::core::ffi::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct file_object {
    pub QD: i32,
    pub compression: u8,
    pub is_compressed: u8,
    pub do_hash: u8,
    pub pad: u8,
    pub blk_sz: u32,
    pub id: u16,
    pub io_type: u16,
    pub head: i64,
    pub tail: i64,
    pub pad11: u64,
    pub io_flags: i32,
    pub io_ret: i32,
    pub thread_count: u32,
    pub sparse: u8,
    pub pad3: u8,
    pub pad2: u16,
    pub pad1: u64,
    pub pvdr: *mut ::core::ffi::c_void,
    pub args: *mut ::core::ffi::c_char,
    pub open: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *const ::core::ffi::c_char,
            arg2: ::core::ffi::c_int,
            ...
        ) -> ::core::ffi::c_int,
    >,
    pub opendir:
        ::core::option::Option<unsafe extern "C" fn(name: *const ::core::ffi::c_char) -> *mut DIR>,
    pub closedir:
        ::core::option::Option<unsafe extern "C" fn(dirp: *mut DIR) -> ::core::ffi::c_int>,
    pub readdir: ::core::option::Option<unsafe extern "C" fn(dirp: *mut DIR) -> *mut dirent>,
    pub close_fd: ::core::option::Option<
        unsafe extern "C" fn(arg1: ::core::ffi::c_int) -> ::core::ffi::c_int,
    >,
    pub close: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void) -> ::core::ffi::c_int,
    >,
    pub truncate: ::core::option::Option<
        unsafe extern "C" fn(arg1: ::core::ffi::c_int, arg2: i64) -> ::core::ffi::c_int,
    >,
    pub fstat: ::core::option::Option<
        unsafe extern "C" fn(arg1: ::core::ffi::c_int, arg2: *mut stat) -> ::core::ffi::c_int,
    >,
    pub fetch: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void) -> *mut ::core::ffi::c_void,
    >,
    pub flush: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
    pub set: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::core::ffi::c_void,
            key: i32,
            value: u64,
        ) -> *mut ::core::ffi::c_void,
    >,
    pub get: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void, key: i32) -> *mut ::core::ffi::c_void,
    >,
    pub submit: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::core::ffi::c_void,
            sz: *mut i32,
            offset: *mut u64,
        ) -> *mut ::core::ffi::c_void,
    >,
    pub complete: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::core::ffi::c_void,
            arg2: *mut ::core::ffi::c_void,
        ) -> *mut ::core::ffi::c_void,
    >,
    pub preserve: ::core::option::Option<
        unsafe extern "C" fn(
            fd: i32,
            mode: u32,
            uid: u32,
            gid: u32,
            atim_sec: i64,
            atim_nano: i64,
            mtim_sec: i64,
            mtim_nano: i64,
        ) -> *mut ::core::ffi::c_void,
    >,
    pub cleanup: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void) -> *mut ::core::ffi::c_void,
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of file_object"][::core::mem::size_of::<file_object>() - 208usize];
    ["Alignment of file_object"][::core::mem::align_of::<file_object>() - 8usize];
    ["Offset of field: file_object::QD"][::core::mem::offset_of!(file_object, QD) - 0usize];
    ["Offset of field: file_object::compression"]
        [::core::mem::offset_of!(file_object, compression) - 4usize];
    ["Offset of field: file_object::is_compressed"]
        [::core::mem::offset_of!(file_object, is_compressed) - 5usize];
    ["Offset of field: file_object::do_hash"]
        [::core::mem::offset_of!(file_object, do_hash) - 6usize];
    ["Offset of field: file_object::pad"][::core::mem::offset_of!(file_object, pad) - 7usize];
    ["Offset of field: file_object::blk_sz"][::core::mem::offset_of!(file_object, blk_sz) - 8usize];
    ["Offset of field: file_object::id"][::core::mem::offset_of!(file_object, id) - 12usize];
    ["Offset of field: file_object::io_type"]
        [::core::mem::offset_of!(file_object, io_type) - 14usize];
    ["Offset of field: file_object::head"][::core::mem::offset_of!(file_object, head) - 16usize];
    ["Offset of field: file_object::tail"][::core::mem::offset_of!(file_object, tail) - 24usize];
    ["Offset of field: file_object::pad11"][::core::mem::offset_of!(file_object, pad11) - 32usize];
    ["Offset of field: file_object::io_flags"]
        [::core::mem::offset_of!(file_object, io_flags) - 40usize];
    ["Offset of field: file_object::io_ret"]
        [::core::mem::offset_of!(file_object, io_ret) - 44usize];
    ["Offset of field: file_object::thread_count"]
        [::core::mem::offset_of!(file_object, thread_count) - 48usize];
    ["Offset of field: file_object::sparse"]
        [::core::mem::offset_of!(file_object, sparse) - 52usize];
    ["Offset of field: file_object::pad3"][::core::mem::offset_of!(file_object, pad3) - 53usize];
    ["Offset of field: file_object::pad2"][::core::mem::offset_of!(file_object, pad2) - 54usize];
    ["Offset of field: file_object::pad1"][::core::mem::offset_of!(file_object, pad1) - 56usize];
    ["Offset of field: file_object::pvdr"][::core::mem::offset_of!(file_object, pvdr) - 64usize];
    ["Offset of field: file_object::args"][::core::mem::offset_of!(file_object, args) - 72usize];
    ["Offset of field: file_object::open"][::core::mem::offset_of!(file_object, open) - 80usize];
    ["Offset of field: file_object::opendir"]
        [::core::mem::offset_of!(file_object, opendir) - 88usize];
    ["Offset of field: file_object::closedir"]
        [::core::mem::offset_of!(file_object, closedir) - 96usize];
    ["Offset of field: file_object::readdir"]
        [::core::mem::offset_of!(file_object, readdir) - 104usize];
    ["Offset of field: file_object::close_fd"]
        [::core::mem::offset_of!(file_object, close_fd) - 112usize];
    ["Offset of field: file_object::close"][::core::mem::offset_of!(file_object, close) - 120usize];
    ["Offset of field: file_object::truncate"]
        [::core::mem::offset_of!(file_object, truncate) - 128usize];
    ["Offset of field: file_object::fstat"][::core::mem::offset_of!(file_object, fstat) - 136usize];
    ["Offset of field: file_object::fetch"][::core::mem::offset_of!(file_object, fetch) - 144usize];
    ["Offset of field: file_object::flush"][::core::mem::offset_of!(file_object, flush) - 152usize];
    ["Offset of field: file_object::set"][::core::mem::offset_of!(file_object, set) - 160usize];
    ["Offset of field: file_object::get"][::core::mem::offset_of!(file_object, get) - 168usize];
    ["Offset of field: file_object::submit"]
        [::core::mem::offset_of!(file_object, submit) - 176usize];
    ["Offset of field: file_object::complete"]
        [::core::mem::offset_of!(file_object, complete) - 184usize];
    ["Offset of field: file_object::preserve"]
        [::core::mem::offset_of!(file_object, preserve) - 192usize];
    ["Offset of field: file_object::cleanup"]
        [::core::mem::offset_of!(file_object, cleanup) - 200usize];
};
extern "C" {
    pub fn file_completetransfer();
}
extern "C" {
    pub fn file_randrd(buf: *mut ::core::ffi::c_void, count: ::core::ffi::c_int);
}
extern "C" {
    pub fn file_prng(buf: *mut ::core::ffi::c_void, sz: ::core::ffi::c_int);
}
extern "C" {
    pub fn file_memoryinit(
        arg1: *mut ::core::ffi::c_void,
        arg2: ::core::ffi::c_int,
    ) -> *mut file_object;
}
extern "C" {
    pub fn file_posixget(arg: *mut ::core::ffi::c_void, key: i32) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn file_posixset(
        arg: *mut ::core::ffi::c_void,
        key: i32,
        value: u64,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn file_posixinit(fob: *mut file_object) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn file_posixfetch(arg: *mut ::core::ffi::c_void) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn file_posixflush(arg: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn file_uringinit(fob: *mut file_object) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn file_dummyinit(fob: *mut file_object) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn file_addfile(fileno: u64, fd: ::core::ffi::c_int) -> *mut file_stat_type;
}
extern "C" {
    pub fn file_getstats(fileno: u64) -> *mut file_stat_type;
}
extern "C" {
    pub fn file_get_activeport(args: *mut ::core::ffi::c_void) -> ::core::ffi::c_int;
}
#[repr(C)]
#[repr(align(64))]
#[derive(Debug, Copy, Clone)]
pub struct file_stat_type {
    pub state: u64,
    pub file_no: u64,
    pub bytes: u64,
    pub block_offset: u64,
    pub block_total: u64,
    pub bytes_total: u64,
    pub fd: i32,
    pub position: u32,
    pub poison: u32,
    pub crc: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of file_stat_type"][::core::mem::size_of::<file_stat_type>() - 64usize];
    ["Alignment of file_stat_type"][::core::mem::align_of::<file_stat_type>() - 64usize];
    ["Offset of field: file_stat_type::state"]
        [::core::mem::offset_of!(file_stat_type, state) - 0usize];
    ["Offset of field: file_stat_type::file_no"]
        [::core::mem::offset_of!(file_stat_type, file_no) - 8usize];
    ["Offset of field: file_stat_type::bytes"]
        [::core::mem::offset_of!(file_stat_type, bytes) - 16usize];
    ["Offset of field: file_stat_type::block_offset"]
        [::core::mem::offset_of!(file_stat_type, block_offset) - 24usize];
    ["Offset of field: file_stat_type::block_total"]
        [::core::mem::offset_of!(file_stat_type, block_total) - 32usize];
    ["Offset of field: file_stat_type::bytes_total"]
        [::core::mem::offset_of!(file_stat_type, bytes_total) - 40usize];
    ["Offset of field: file_stat_type::fd"][::core::mem::offset_of!(file_stat_type, fd) - 48usize];
    ["Offset of field: file_stat_type::position"]
        [::core::mem::offset_of!(file_stat_type, position) - 52usize];
    ["Offset of field: file_stat_type::poison"]
        [::core::mem::offset_of!(file_stat_type, poison) - 56usize];
    ["Offset of field: file_stat_type::crc"]
        [::core::mem::offset_of!(file_stat_type, crc) - 60usize];
};
extern "C" {
    pub fn memset_avx(src: *mut ::core::ffi::c_void);
}
